[gd_scene load_steps=2 format=3 uid="uid://d27hpt334j75o"]

[ext_resource type="Script" uid="uid://cu22ikvp6qxuk" path="res://scripts/title_screen.gd" id="1_b545l"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b545l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -20.0
offset_right = 28.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.742131, 0.342527, 0, 1)
theme_override_font_sizes/font_size = 20
text = "START"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="ExitGame" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -76.0
offset_right = 68.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.790729, 0.228135, 0, 1)
theme_override_colors/font_outline_color = Color(0.455793, 0.477618, 0, 0.423529)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Just A Sleep Story"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
